feat: Enhance VtsSystem functionality with improved search and filtering capabilities
- Updated VtsSystemController to include an option for including counts in search results.
- Modified VtsSystemRepository to streamline queries by accepting a list of organizational unit IDs.
- Refactored VtsSystemService to accommodate changes in repository methods and added logic for handling counts in search results.
- Adjusted application properties for database connection.
- Added comprehensive unit tests for VtsSystemRepository and VtsSystemService to ensure functionality and coverage for new features.
- Improved error handling in controller tests to verify proper responses during exceptions.